--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
 
     <div class="card">
         <div style="text-align: center; margin-bottom: 24px;">
-            <h1 style="margin-top: 0;">Welcome to VaultV1</h1>
+            <h1 style="margin-top: 0;">VaultV1</h1>
         </div>
 
         <!-- Standard Spring Security Form Login -->
