maven confing change + small UI change

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,10 +34,10 @@
 
         <div
             style="margin-top: 16px; text-align: center; border-top: 1px solid var(--border-color); padding-top: 16px;">
-            <p style="margin-bottom: 8px; font-size: 13px;">Don't have an account?</p>
-            <a href="/register.html">
-                <button class="secondary" style="width: 100%;">Sign up</button>
-            </a>
+            <p style="margin-bottom: 0px; font-size: 14px;">
+                Don't have an account?
+                <a href="/register.html" style="color: var(--accent-color); text-decoration: none; font-weight: 600;">Sign up</a>
+            </p>
         </div>
     </div>
 
