--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,6 +22,17 @@
         </div>
 
         <!-- Standard Spring Security Form Login -->
+        <div id="login-error"
+            style="display: none; background-color: rgba(207, 34, 46, 0.1); border: 1px solid #cf222e; color: #cf222e; padding: 12px; border-radius: 6px; margin-bottom: 16px; font-size: 14px; text-align: center;">
+            Incorrect username or password.
+        </div>
+        <script>
+            const urlParams = new URLSearchParams(window.location.search);
+            if (urlParams.has('error')) {
+                document.getElementById('login-error').style.display = 'block';
+            }
+        </script>
+
         <form action="/login" method="post">
             <label for="username">Username</label>
             <input type="text" id="username" name="username" placeholder="" required>
@@ -36,7 +47,8 @@
             style="margin-top: 16px; text-align: center; border-top: 1px solid var(--border-color); padding-top: 16px;">
             <p style="margin-bottom: 0px; font-size: 14px;">
                 Don't have an account?
-                <a href="/register.html" style="color: var(--accent-color); text-decoration: none; font-weight: 600;">Sign up</a>
+                <a href="/register.html"
+                    style="color: var(--accent-color); text-decoration: none; font-weight: 600;">Sign up</a>
             </p>
         </div>
     </div>
